layout: edit detail delete button and RWD adjust

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -64,6 +64,9 @@ header {
   font-size: 3rem;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
 
+.edit-wrapper {
+  gap: 10px; }
+
 @media screen and (max-width: 992px) {
   .card img {
     height: 115px; } }
