--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -79,6 +79,10 @@ header {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.edit-wrapper {
+  gap: 10px;
+}
+
 @media screen and (max-width: 992px) {
   .card img {
     height: 115px;
