--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,9 +5,19 @@
       <form action="/search">
         <h4 class="mb-2">尋找餐廳：</h4>
         <div class="input-group">
-          <input type="text" name="keyword" class="form-control" placeholder="輸入餐廳、分類" aria-label="Restaurant Name..." value="{{ keyword }}" aria-describedby="search-button">
+          <input
+            type="text"
+            name="keyword"
+            class="form-control"
+            placeholder="輸入餐廳、分類"
+            aria-label="Restaurant Name..."
+            value="{{keyword}}"
+            aria-describedby="search-button"
+          />
           <div class="input-group-append">
-            <button class="btn btn-major" type="submit" id="search-button"><i class="fa fa-search"></i></button>
+            <button class="btn btn-major" type="submit" id="search-button"><i
+                class="fa fa-search"
+              ></i></button>
           </div>
         </div>
       </form>
@@ -16,19 +26,25 @@
 </div>
 
 <!-- restaurant list -->
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-md-10 col-12 mx-auto">
-      <div class="card-columns">
-        {{#each restaurant}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
+<div class="container pt-5 pb-5">
+  <div class="row mx-auto card-columns d-flex flex-wrap justify-content-around">
+    {{#each restaurant}}
+      <div
+        class="wrapper d-flex align-items-end flex-column col-10 col-sm-5 col-md-3 p-0 m-1"
+      >
+        <a href="/restaurants/{{this.id}}" class="text-secondary w-100">
           <div class="card mb-3">
-            <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}">
+            <img
+              class="card-img-top"
+              src="{{this.image}}"
+              alt="{{this.name}}"
+            />
             <div class="card-body p-3">
               <h6 class="card-title mb-1">{{this.name}}</h6>
 
               <div class="restaurant-category mb-1">
-                <i class="fas fa-utensils pr-2"></i> {{this.category}}
+                <i class="fas fa-utensils pr-2"></i>
+                {{this.category}}
               </div>
 
               <span class="badge badge-pill badge-danger font-weight-normal">
@@ -38,8 +54,19 @@
             </div>
           </div>
         </a>
-        {{/each}}
+        <div class="edit-wrapper mb-4 d-flex align-items-center">
+          <a class="text-info" href="./restaurants/{{this.id}}/edit">Edit</a>
+          <a class="text-info" href="./restaurants/{{this.id}}">Detail</a>
+          <form
+            action="./restaurants/{{this.id}}/delete"
+            method="POST"
+            style="display: inline;"
+          ><button
+              type="submit"
+              class="btn btn-info btn-sm"
+            >Delete</button></form>
+        </div>
       </div>
-    </div>
+    {{/each}}
   </div>
 </div>
