--- a/views/restaurant_intro.handlebars
+++ b/views/restaurant_intro.handlebars
@@ -1,5 +1,5 @@
-<h1 class="mb-1 restaurant-show-title">{{ restaurant.name }}</h1>
-<div class="container">
+<h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
+<div class="container pb-5">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
 
@@ -8,7 +8,7 @@
           <i class="fa fa-cutlery pr-2"></i>
           類別：
         </span>
-        {{ restaurant.category }}
+        {{restaurant.category}}
       </p>
 
       <p class="mb-1">
@@ -16,8 +16,12 @@
           <i class="fa fa-map-marker pr-2"></i>
           地址：
         </span>
-        {{ restaurant.location }}
-        <a href="{{ restaurant.google_map }}" class="text-secondary" target="_blank">
+        {{restaurant.location}}
+        <a
+          href="{{restaurant.google_map}}"
+          class="text-secondary"
+          target="_blank"
+        >
           <i class="fa fa-location-arrow pr-2 fa-xs"></i>
         </a>
       </p>
@@ -27,14 +31,19 @@
           <i class="fa fa-phone pr-2"></i>
           電話：
         </span>
-        {{ restaurant.phone }}
+        {{restaurant.phone}}
       </p>
 
       <p class="mb-5">
-        {{ restaurant.description }}
+        {{restaurant.description}}
       </p>
 
-      <img class="rounded mx-auto d-block mb-4 w-100" src="{{ restaurant.image }}" alt="{{ restaurant.name }}" style="max-width: 600px;">
+      <img
+        class="rounded mx-auto d-block mb-4 w-100"
+        src="{{restaurant.image}}"
+        alt="{{restaurant.name}}"
+        style="max-width: 600px;"
+      />
     </div>
   </div>
 </div>
