--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,20 +1,29 @@
 header {
-  overflow: hidden; }
+  overflow: hidden;
+}
+
+.opacity {
+  opacity: 0.8;
+}
 
 .navbar .navbar-brand {
-  color: #4592af; }
+  color: #4592af;
+}
 
 .navbar .navbar-brand:hover {
-  color: #226089; }
+  color: #226089;
+}
 
 .banner {
   position: relative;
   z-index: -1;
   margin: -5px;
   height: 360px;
-  background: #dddddd center center url("https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5720/restaurants-list-cover.jpg");
+  background: #dddddd center center
+    url("https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/5720/restaurants-list-cover.jpg");
   background-size: cover;
-  filter: blur(3px); }
+  filter: blur(3px);
+}
 
 .search-bar .search-bar-outer {
   margin: 0 auto;
@@ -24,37 +33,46 @@ header {
   padding: 20px 30px;
   border: 0;
   margin-top: -60px;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
 
 .search-bar .search-bar-inner h4 {
-  color: #9b4b4b; }
+  color: #9b4b4b;
+}
 
 .form-control::placeholder {
   color: #aaaaaa;
-  font-size: 0.8rem; }
+  font-size: 0.8rem;
+}
 
 .btn-major {
   background-color: #9b4b4b;
-  color: white; }
+  color: white;
+}
 
 .form-control:focus {
   box-shadow: none;
-  border-color: #ced4da; }
+  border-color: #ced4da;
+}
 
 .card {
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+}
 
 .card img {
-  height: 180px; }
+  height: 180px;
+}
 
 .card-title {
   overflow: hidden;
   text-overflow: ellipsis;
-  white-space: nowrap; }
+  white-space: nowrap;
+}
 
 .restaurant-category {
   color: #666666;
-  font-size: 0.8rem; }
+  font-size: 0.8rem;
+}
 
 .restaurant-show-title {
   position: relative;
@@ -62,19 +80,31 @@ header {
   color: white;
   text-align: center;
   font-size: 3rem;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); }
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
 
 .edit-wrapper {
-  gap: 10px; }
+  gap: 10px;
+}
+
+.add-icon {
+  font-size: 3.5rem;
+}
 
 @media screen and (max-width: 992px) {
   .card img {
-    height: 115px; } }
+    height: 115px;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .restaurant-show-title {
-    font-size: 2rem; } }
+    font-size: 2rem;
+  }
+}
 
 @media screen and (max-width: 575px) {
   .card img {
-    height: auto; } }
+    height: auto;
+  }
+}
