--- a/views/restaurant_intro.handlebars
+++ b/views/restaurant_intro.handlebars
@@ -1,4 +1,4 @@
-<h1 class="mb-1 restaurant-show-title">{{restaurant.name}}</h1>
+<h1 class="mb-1 restaurant-show-title">{{item.name}}</h1>
 <div class="container pb-5">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
@@ -8,7 +8,7 @@
           <i class="fa fa-cutlery pr-2"></i>
           類別：
         </span>
-        {{restaurant.category}}
+        {{item.category}}
       </p>
 
       <p class="mb-1">
@@ -16,12 +16,8 @@
           <i class="fa fa-map-marker pr-2"></i>
           地址：
         </span>
-        {{restaurant.location}}
-        <a
-          href="{{restaurant.google_map}}"
-          class="text-secondary"
-          target="_blank"
-        >
+        {{item.location}}
+        <a href="{{item.google_map}}" class="text-secondary" target="_blank">
           <i class="fa fa-location-arrow pr-2 fa-xs"></i>
         </a>
       </p>
@@ -31,19 +27,34 @@
           <i class="fa fa-phone pr-2"></i>
           電話：
         </span>
-        {{restaurant.phone}}
+        {{item.phone}}
       </p>
 
       <p class="mb-5">
-        {{restaurant.description}}
+        {{item.description}}
       </p>
 
       <img
         class="rounded mx-auto d-block mb-4 w-100"
-        src="{{restaurant.image}}"
-        alt="{{restaurant.name}}"
+        src="{{item.image}}"
+        alt="{{item.name}}"
         style="max-width: 600px;"
       />
+
+      <div
+        class="edit-wrapper mb-4 d-flex align-items-center justify-content-center"
+      >
+        <a class="text-info" href="/restaurants/{{item._id}}/edit">Edit</a>
+        <form
+          action="/{{item._id}}/delete"
+          method="POST"
+          style="display: inline;"
+          class="mb-0"
+        ><button
+            type="submit"
+            class="btn btn-info btn-sm"
+          >Delete</button></form>
+      </div>
     </div>
   </div>
 </div>
