fix seeder and adjust create page

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -35,11 +35,11 @@
               type="number"
               min="0"
               max="5"
+              step="0.1"
               class="form-control mt-2"
               placeholder="0~5&#9733"
             />
           </p>
-
         </div>
 
         <div class="row row-2">
