change form validation

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -68,7 +68,7 @@
             </span>
             <input
               name="phone"
-              type="text"
+              type="tel"
               class="form-control mt-2"
               value="{{item.phone}}"
               placeholder="必填欄位"
@@ -100,7 +100,7 @@
             </span>
             <input
               name="google_map"
-              type="text"
+              type="url"
               class="form-control mt-2"
               value="{{item.google_map}}"
               placeholder="請輸入 Google_map 網址"
@@ -130,7 +130,7 @@
             </span>
             <input
               name="image"
-              type="text"
+              type="url"
               class="form-control mt-2"
               value="{{item.image}}"
               placeholder="必填欄位，請輸入圖片網址"
