--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -71,7 +71,7 @@
             </span>
             <input
               name="phone"
-              type="text"
+              type="tel"
               class="form-control mt-2"
               placeholder="必填欄位"
               required
@@ -101,7 +101,7 @@
             </span>
             <input
               name="google_map"
-              type="text"
+              type="url"
               class="form-control mt-2"
               placeholder="請輸入 Google_map 網址"
             />
@@ -130,7 +130,7 @@
             </span>
             <input
               name="image"
-              type="text"
+              type="url"
               class="form-control mt-2"
               placeholder="必填欄位，請輸入圖片網址"
               required
