refactor: modify express routes

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -4,7 +4,7 @@
     <div class="col-10 col-md-10 mx-auto mb-5">
 
       <form
-        action="/restaurants/{{item._id}}/edit"
+        action="/restaurants/{{item._id}}?_method=PUT"
         method="POST"
         class="d-flex flex-column justify-content-center needs-validation"
       >
