--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,7 +58,7 @@
           <a class="text-info" href="./restaurants/{{this._id}}/edit">Edit</a>
           <a class="text-info" href="./restaurants/{{this._id}}">Detail</a>
           <form
-            action="./restaurants/{{this._id}}/delete"
+            action="./restaurants/{{this._id}}?_method=DELETE"
             method="POST"
             style="display: inline;"
             class="mb-0"
