--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,6 +26,12 @@
             />
             我的餐廳清單
           </a>
+
+          <a
+            class="btn btn-info d-flex flex-column align-items-center text-decoration-none fs-2"
+            href="/restaurants/create"
+          >Create
+          </a>
         </div>
       </nav>
 
@@ -33,9 +39,18 @@
     </header>
 
     {{{body}}}
-
-    <script src="/javascripts/popper.js"></script>
-    <script src="/javascripts/jquery-3.3.1.min.js"></script>
-    <script src="/javascripts/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js"
+      integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+      crossorigin="anonymous"
+    ></script>
+    {{! <script src="/javascripts/popper.min.js"></script> }}
+    {{! <script src="/javascripts/jquery-3.3.1.min.js"></script> }}
+    {{! <script src="/javascripts/bootstrap.min.js"></script> }}
   </body>
 </html>
