feat: add user registration feature

--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -23,6 +23,7 @@
             name="email"
             class="form-control"
             placeholder="Enter email"
+            value="{{email}}"
           />
         </div>
         <div class="form-group">
@@ -33,7 +34,6 @@
             name="password"
             class="form-control"
             placeholder="Enter password"
-            value="{{password}}"
           />
         </div>
         <div class="form-group">
@@ -44,7 +44,6 @@
             name="confirmPassword"
             class="form-control"
             placeholder="Confirm password"
-            value="{{confirmPassword}}"
           />
         </div>
 
