--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -25,12 +25,9 @@
           />
         </div>
 
-        <button
-          type="submit"
-          class="btn btn-info btn-block mt-3"
-        >Login</button>
-        <a href="/auth/facebook" class="btn btn-primary btn-block mt-3">Login with
-          Facebook</a>
+        <button type="submit" class="btn btn-info btn-block mt-3">Login</button>
+        <a href="/auth/facebook" class="btn btn-primary btn-block mt-3">Login
+          with Facebook</a>
       </form>
       <p class="lead mt-4">
         No account?
