--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <title>Restaurant List</title>
@@ -28,11 +34,19 @@
           </a>
 
           {{#if isAuthenticated}}
-            <a
-              class="btn btn-info d-flex flex-column align-items-center text-decoration-none fs-2"
-              href="/restaurants/create"
-            >Create
-            </a>
+            <div class="d-flex">
+              <a
+                class="btn btn-info d-flex flex-column align-items-center text-decoration-none fs-2"
+                href="/restaurants/create"
+              >Create
+              </a>
+              <a
+                class="btn btn-info d-flex flex-column align-items-center text-decoration-none fs-2"
+                style="margin-left: 10%;;"
+                href="/users/logout"
+              >Logout
+              </a>
+            </div>
           {{else}}
             <div class="d-flex">
               <a
