--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,150 +1,154 @@
-<h1 class="mb-1 restaurant-show-title">New Restaurant</h1>
-<div class="container">
-  <div class="row">
-    <div class="col-10 col-md-10 mx-auto mb-5">
+<div class="banner"></div>
+</header>
+<div >
+  <h1 class="mb-1 restaurant-show-title">New Restaurant</h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-10 col-md-10 mx-auto mb-5">
 
-      <form
-        action="/restaurants"
-        method="POST"
-        class="d-flex flex-column justify-content-center needs-validation"
-      >
-        <div class="row row-1">
-          <p class="mb-3 col-8">
-            <span class="text-secondary">
-              <i class="fa fa-building pr-2"></i>
-              餐廳名稱：<span class="text-danger">*</span>
-            </span>
-            <input
-              type="text"
-              class="form-control mt-2"
-              name="name"
-              style="display: inline;"
-              placeholder="必填欄位"
-              required
-            />
-          </p>
-
-          <p class="mb-3 col-4">
-            <span class="text-secondary">
-              <i class="fa fa-star-half-o pr-2" aria-hidden="true"></i>
-              評分：
-            </span>
-            <input
-              id="rating"
-              name="rating"
-              type="number"
-              min="0"
-              max="5"
-              step="0.1"
-              class="form-control mt-2"
-              placeholder="0~5&#9733"
-            />
-          </p>
-        </div>
-
-        <div class="row row-2">
-          <p class="mb-3 col-6">
-            <span class="text-secondary">
-              <i class="fa fa-cutlery pr-2"></i>
-              類別：
-            </span>
-            <select
-              class="form-control mt-2"
-              type="text"
-              name="category"
-              aria-label="Default select example"
-            >
-              <option value="日本料理" selected>日本料理</option>
-              <option value="義式餐廳">義式餐廳</option>
-              <option value="美式">美式料理</option>
-              <option value="美式">中式料理</option>
-              <option value="中東料理">中東料理</option>
-              <option value="咖啡">咖啡</option>
-              <option value="酒吧">酒吧</option>
-            </select>
-          </p>
-
-          <p class="mb-3 col-6">
-            <span class="text-secondary">
-              <i class="fa fa-phone pr-2"></i>
-              電話：<span class="text-danger">*</span>
-            </span>
-            <input
-              name="phone"
-              type="tel"
-              class="form-control mt-2"
-              placeholder="必填欄位"
-              required
-            />
-          </p>
-        </div>
-
-        <div class="row row-3">
-          <p class="mb-3 col-7">
-            <span class="text-secondary">
-              <i class="fa fa-map-marker pr-2"></i>
-              地址：<span class="text-danger">*</span>
-            </span>
-            <input
-              type="text"
-              name="location"
-              class="form-control mt-2"
-              placeholder="必填欄位"
-              required
-            />
-          </p>
-
-          <p class="mb-3 col-5">
-            <span class="text-secondary">
-              <i class="fa fa-location-arrow pr-2"></i>
-              Google Map：
-            </span>
-            <input
-              name="google_map"
-              type="url"
-              class="form-control mt-2"
-              placeholder="請輸入 Google_map 網址"
-            />
-          </p>
-        </div>
-
-        <div class="row row-4">
-          <p class="mb-3 col-12">
-            <span class="text-secondary">
-              <i class="fa fa-commenting pr-1"></i>
-              餐廳敘述：
-            </span>
-            <textarea
-              name="description"
-              type="text"
-              class="form-control mt-2"
-            ></textarea>
-          </p>
-        </div>
-
-        <div class="row row-5">
-          <p class="mb-5 col-12">
-            <span class="text-secondary">
-              <i class="fa fa-picture-o pr-2"></i>
-              圖片：<span class="text-danger">*</span>
-            </span>
-            <input
-              name="image"
-              type="url"
-              class="form-control mt-2"
-              placeholder="必填欄位，請輸入圖片網址"
-              required
-            />
-          </p>
-        </div>
-
-        <div
-          class="edit-wrapper mb-4 d-flex align-items-center justify-content-center"
+        <form
+          action="/restaurants"
+          method="POST"
+          class="d-flex flex-column justify-content-center needs-validation"
         >
-          <a class="text-info" href="/">Home</a>
-          <button type="submit" class="btn btn-info">Save</button>
-        </div>
-      </form>
+          <div class="row row-1">
+            <p class="mb-3 col-8">
+              <span class="text-secondary">
+                <i class="fa fa-building pr-2"></i>
+                餐廳名稱：<span class="text-danger">*</span>
+              </span>
+              <input
+                type="text"
+                class="form-control mt-2"
+                name="name"
+                style="display: inline;"
+                placeholder="必填欄位"
+                required
+              />
+            </p>
+
+            <p class="mb-3 col-4">
+              <span class="text-secondary">
+                <i class="fa fa-star-half-o pr-2" aria-hidden="true"></i>
+                評分：
+              </span>
+              <input
+                id="rating"
+                name="rating"
+                type="number"
+                min="0"
+                max="5"
+                step="0.1"
+                class="form-control mt-2"
+                placeholder="0~5&#9733"
+              />
+            </p>
+          </div>
+
+          <div class="row row-2">
+            <p class="mb-3 col-6">
+              <span class="text-secondary">
+                <i class="fa fa-cutlery pr-2"></i>
+                類別：
+              </span>
+              <select
+                class="form-control mt-2"
+                type="text"
+                name="category"
+                aria-label="Default select example"
+              >
+                <option value="日本料理" selected>日本料理</option>
+                <option value="義式餐廳">義式餐廳</option>
+                <option value="美式">美式料理</option>
+                <option value="美式">中式料理</option>
+                <option value="中東料理">中東料理</option>
+                <option value="咖啡">咖啡</option>
+                <option value="酒吧">酒吧</option>
+              </select>
+            </p>
+
+            <p class="mb-3 col-6">
+              <span class="text-secondary">
+                <i class="fa fa-phone pr-2"></i>
+                電話：<span class="text-danger">*</span>
+              </span>
+              <input
+                name="phone"
+                type="tel"
+                class="form-control mt-2"
+                placeholder="必填欄位"
+                required
+              />
+            </p>
+          </div>
+
+          <div class="row row-3">
+            <p class="mb-3 col-7">
+              <span class="text-secondary">
+                <i class="fa fa-map-marker pr-2"></i>
+                地址：<span class="text-danger">*</span>
+              </span>
+              <input
+                type="text"
+                name="location"
+                class="form-control mt-2"
+                placeholder="必填欄位"
+                required
+              />
+            </p>
+
+            <p class="mb-3 col-5">
+              <span class="text-secondary">
+                <i class="fa fa-location-arrow pr-2"></i>
+                Google Map：
+              </span>
+              <input
+                name="google_map"
+                type="url"
+                class="form-control mt-2"
+                placeholder="請輸入 Google_map 網址"
+              />
+            </p>
+          </div>
+
+          <div class="row row-4">
+            <p class="mb-3 col-12">
+              <span class="text-secondary">
+                <i class="fa fa-commenting pr-1"></i>
+                餐廳敘述：
+              </span>
+              <textarea
+                name="description"
+                type="text"
+                class="form-control mt-2"
+              ></textarea>
+            </p>
+          </div>
+
+          <div class="row row-5">
+            <p class="mb-5 col-12">
+              <span class="text-secondary">
+                <i class="fa fa-picture-o pr-2"></i>
+                圖片：<span class="text-danger">*</span>
+              </span>
+              <input
+                name="image"
+                type="url"
+                class="form-control mt-2"
+                placeholder="必填欄位，請輸入圖片網址"
+                required
+              />
+            </p>
+          </div>
+
+          <div
+            class="edit-wrapper mb-4 d-flex align-items-center justify-content-center"
+          >
+            <a class="text-info" href="/">Home</a>
+            <button type="submit" class="btn btn-info">Save</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+  </div>
