--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,7 @@
+
+<div class="banner"></div>
+</header>
+
 <!-- search bar -->
 <div class="container search-bar function-bar">
   <div class="row d-flex justify-content-around">
