--- a/views/restaurant_intro.handlebars
+++ b/views/restaurant_intro.handlebars
@@ -1,3 +1,5 @@
+<div class="banner"></div>
+</header>
 <h1 class="mb-1 restaurant-show-title">{{item.name}}</h1>
 <div class="container pb-5">
   <div class="row">
